# LabGym-Fork

./: implementation-plan.md  specifications.md
LabGym/: .gitignore  COPYRIGHT.txt  LICENSE.txt  README.md  offline_detector_augment.md  pyproject.toml
LabGym/LabGym/: COPYRIGHT.txt  __main__.py  analysis_presets.py  categorizer.py  gui_analyzer.py  gui_categorizer.py  gui_id_review.py  gui_main.py  tools.py
LabGym/LabGym/annotator/: __init__.py  __main__.py  export_to_labgym.py
LabGym/LabGym/detection/: __init__.py  batch_detect.py
LabGym/LabGym/gui_pyside/: __init__.py  app.py  legacy_launch.py  main_window.py  project_state.py
LabGym/LabGym/id_review/: __init__.py  apply.py  contacts.py  dataset.py  samples.py  tracklets.py  types.py
LabGym/LabGym/identity/: __init__.py  package.py
LabGym/LabGym/training/: __init__.py  ethogram_examples.py  example_sort.py  losses.py  soft_labels.py
LabGym/docs/: module-structure.md
LabGym/docs/features/: annotator-workflow.md
LabGym/tests/unit/: test_analysis_presets.py  test_annotator_schema.py  test_annotator_tracklets.py  test_batch_detect.py  (+10 more)
behavior_video_annotator/: .gitignore  README.md  main.py  project_plan.md  pyproject.toml
behavior_video_annotator/core/: __init__.py  annotation_manager.py  data_models.py  example_generator.py  metrics_calculator.py
behavior_video_annotator/ui/: behavior_palette.py  bout_list.py  export_dialog.py  main_window.py  metrics_panel.py  playback_controls.py  timeline_widget.py  video_display.py
behavior_video_annotator/utils/: helpers.py  make_test_video.py
(+60 files in other folders)
